# hil-bench

./: .env_template  .gitignore  README.md  config_mappings.example.yaml  config_mappings.template.yaml  config_mappings.yaml  judge_config.template.yaml  judge_config.yaml  pyproject.toml  run_hil_bench.py
SWE-agent/sweagent/: __init__.py
SWE-agent/sweagent.egg-info/: SOURCES.txt
SWE-agent/sweagent/agent/: agents.py  (+5 more)
configs/sql/: ask_sql_config_claude_opus_4-6.yaml  ask_sql_config_gemini_3-1_pro_preview_customtools.yaml  ask_sql_config_gpt_5-3_codex.yaml  ask_sql_config_gpt_5-4.yaml  ask_sql_config_qwen3_30b_a3b_instruct_2507.yaml  default_sql_config.yaml
configs/swe/: ask_config_claude_opus_4-6.yaml  ask_config_gemini_3-1_pro_preview_customtools.yaml  ask_config_gpt_5-3_codex.yaml  ask_config_gpt_5-4.yaml  ask_config_qwen3_30b_a3b_instruct_2507.yaml  default_swe_config.yaml
harbor_release_scale_ai/: README.md  dataset.toml
harbor_sql/: .gitignore  build_images.sh  generate_harbor_sql_tasks.py  warmup_data.sh
harbor_swe/: README.md  build_images.sh  fix_harbor_tasks.py  warmup_images.sh
harbor_swe/shared/: image_source_defaults.json
hil_bench/: ask_human_server.py  business_info_server.py  cli.py  jinja_utils.py  litellm_utils.py
hil_bench/scripts/: batch_runner.py  sql.py  swe.py
hil_bench/templates/: problem_full_info.jinja2
hil_bench/utils/: calculate_pass_at_1.py  calculate_sql_pass_at_1.py  compute_hil_metrics.py  config_mapping.py  custom_eval.py  instance_utils.py  make_model_specific_config.py  port_utils.py  server_utils.py  set_task_env.py
(+2699 files in other folders)
